--- a/unit2/week_10/week10-homework-pokedex/package.json
+++ b/unit2/week_10/week10-homework-pokedex/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "express": "^4.17.1",
     "express-react-views": "^0.11.0",
+    "method-override": "^3.0.0",
     "nodemon": "^2.0.4",
     "react": "^16.13.1",
     "react-dom": "^16.13.1"
